# cmpt-433

public/: hello_world  motd  zephyr_mcu.elf
public/ZenHatOverlayAndTLV320AIC3104Driver/: k3-am67a-beagley-ai-zenhat-audio.dtbo  k3-am67a-beagley-ai-zenhat-audio.dts  snd-soc-tlv320aic3x-i2c.ko.xz  snd-soc-tlv320aic3x.ko.xz
public/assigment-1/: reaction_timer
public/assigment-2/: light_sampler  noworky
public/assignment-3/: beat_box
public/assignment-4/: neopixel
public/r5/: zephyr_mcu.elf  zephyr_mcu_neopixel.elf
work/assignment-1/: Makefile  as1-capture.txt  cmake_install.cmake
work/assignment-1/app/: CMakeLists.txt
work/assignment-1/app/src/: main.c  reaction_timer.c
work/assignment-1/hal/include/hal/: joystick.h  led.h
work/assignment-1/hal/src/: joystick.c  led.c
work/assignment-2/: CMakeLists.txt  Makefile  gdb-full-debugging-session.txt
work/assignment-2/app/: CMakeLists.txt  Makefile  cmake_install.cmake
work/assignment-2/app/include/: lcd.h  udp.h
work/assignment-2/app/src/: lcd.c  light_sampler.c  noworky.c  periodTimer.c  udp.c
work/assignment-2/hal/: CMakeLists.txt
work/assignment-2/hal/include/hal/: gpio.h  joystick.h  light_sensor.h  pwm.h  rotary_statemachine.h  sampler.h
work/assignment-2/hal/src/: gpio.c  joystick.c  light_sensor.c  pwm.c  rotary_statemachine.c  sampler.c
work/assignment-3/: CMakeLists.txt
work/assignment-3/app/: CMakeLists.txt
work/assignment-3/app/include/: drum_beat.h  lcd_screens.h  udp.h
work/assignment-3/app/src/: audio_mixer.c  beat_box.c  drum_beat.c  lcd_screens.c  udp.c
work/assignment-3/hal/include/hal/: accelerometer.h  gpio.h  joystick.h  periodTimer.h
work/assignment-3/hal/src/: accelerometer.c  gpio.c  lcd.c  periodTimer.c  rotary_statemachine.c
work/assignment-3/server/: package-lock.json
work/assignment-4/: CMakeLists.txt  r5_mcu_build.sh
work/assignment-4/app/: CMakeLists.txt
work/assignment-4/app/hal/: CMakeLists.txt
work/assignment-4/app/hal/include/hal/: accelerometer.h  lcd.h  rotary_statemachine.h
work/assignment-4/app/hal/src/: accelerometer.c  joystick.c  rotary_statemachine.c
work/assignment-4/app/src/: linux-main.c  sharedDataLayout.h
work/assignment-4/src/: main.c
work/blinky/: r5_mcu_build.sh
work/cmake_lcdstarter/app/src/: main.c
work/demo/assignment-1/: CMakeCache.txt  CMakeLists.txt
work/demo/assignment-1/app/: CMakeCache.txt  CMakeLists.txt  Makefile
work/demo/assignment-1/app/src/: reaction_timer.c
work/demo/assignment-1/hal/: Makefile  cmake_install.cmake
work/demo/assignment-1/hal/include/hal/: joystick.h
work/myApps/led-guide/: led-controller  led-controller.c
work/myApps/quickStart/: helloworld.c  helloworld_host
work/neopixel/: load_r5_mcu.sh
work/neopixel/sharedMem-Linux/: Makefile  sharedDataLayout.h  sharedMem-Linux.c
work/neopixel/src/: main.c  sharedDataLayout.h
